# trading-on-tcbs-api

./: .gitignore  CLAUDE.md  Makefile  README.md  add-file-test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scan_results.csv  test_other_sources.py  test_requests.py  test_tcbs.py  test_vci.py
.agent/workflows/: add_strategy_or_indicator.md
.github/workflows/: ci.yml
config/: futures_config.yaml  holidays_vn.csv
core/: order_monitor.py
data/: ledger.csv
data/stocks/: ACB_1D.csv  BCM_1D.csv  BID_1D.csv  BVH_1D.csv  CTG_1D.csv  FPT_1D.csv  GAS_1D.csv  GVR_1D.csv  HDB_1D.csv  HPG_1D.csv  MBB_1D.csv  MSN_1D.csv  MWG_1D.csv  PLX_1D.csv  POW_1D.csv  SAB_1D.csv  SHB_1D.csv  SSB_1D.csv  SSI_1D.csv  STB_1D.csv  TCB_1D.csv  TPB_1D.csv  VCB_1D.csv  VHM_1D.csv  VIB_1D.csv  VIC_1D.csv  VJC_1D.csv  VNM_1D.csv  VPB_1D.csv  VRE_1D.csv
docs/: ADR-001-data-source.md  ADR-002-execution-path.md  ADR-003-tool-protocol.md  AI_INTEGRATION_PLAN.md  AI_INTEGRATION_TODO.md  PHASE10_HITL_RUNBOOK.md  PHASE2_TOP3_REBASELINE.md  PHASE5_SOAK_RUNBOOK.md  PHASE8_PAPER_TRADER_RUNBOOK.md  QUICKSTART.md  ROAD_TO_100_PERCENT.md  SYSTEM_ASSESSMENT.md  crisis_delta_hedging_playbook.md  delta_hedging_playbook_ext.md  futures_trading_glossary.md  futures_trading_guide.md  stock_system_v2_guide.md  stock_trading_glossary.md  stock_trading_guide.md  stock_trading_structure.md  stock_trading_to_do.md  strategy_and_indicator_guide.md  system_architecture.md  tcbs_openapi.json  to_do.md
futures_strategy/: __init__.py  streaming_data_handler.py
indicators/: base.py  signal_generator.py  talib_indicators.py
logger_utils/: __init__.py
runners/: run_futures_strategy.py  run_stock_strategy.py  setup_credentials.py  test_configuration.py
simple_wow/: config_manager.py  main.py  trading_asyncio_module.py
simple_wow/raw_files/: add_signal
simple_wow/strategies/: base_strategy.py  rsi_strategy.py
stock_strategy/: __init__.py  data_manager.py  stock_api_client.py
stock_system_v2/: account_manager.py  analyze_performance.py  auth.py  auto_trader.py  backtester.py  config.py  data_provider.py  fetch_real_assets.py  main.py  market_scanner.py  order_manager.py  order_tracker.py  probe_assets.py  probe_history.py  probe_profile.py  probe_signal.py  probe_vnstock.py  scan_market.py  test_endpoint.py  test_real_account.py  trade_manager.py  verify_account.py  verify_analytics.py  verify_backtest.py  verify_data_provider.py  verify_live_price.py  verify_order.py
stock_system_v2/strategies/: rsi_strategy.py  volume_strategy.py
tests/: conftest.py  test_agents.py  test_backtest_result.py  test_backtester_e2e.py  test_channel_telegram.py  test_channel_terminal.py  test_continuous.py  test_costs.py  test_crash_recovery.py  test_exceptions.py  test_hard_caps.py  test_health.py  test_hitl_coordinator.py  test_live_trader.py  test_obs.py  test_order_manager.py  test_order_tracker.py  test_pending_signal_store.py  test_position_reconciler.py  test_pre_trade_validator.py  test_revalidator.py  test_schemas.py  test_settings.py  test_tools_hitl.py  test_tools_smoke.py  test_walk_forward.py
tests/data_ingest/: test_data_provider.py  test_ohlcv_schema.py  test_reconciler.py
trading_on_tcbs_api/: test_signals.py
utils/: __init__.py  config_manager.py  token_manager.py
ws_clients/: base_websocket.py
(+278 files in other folders)
